--- a/Apps/Backend/package.json
+++ b/Apps/Backend/package.json
@@ -11,9 +11,14 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.96",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
