feat: env configuration

--- a/Apps/Backend/tsconfig.json
+++ b/Apps/Backend/tsconfig.json
@@ -9,7 +9,8 @@
     "outDir": "./dist",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "types": ["node", "express"],
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
