--- a/Apps/Backend/package.json
+++ b/Apps/Backend/package.json
@@ -15,6 +15,7 @@
     "@types/mongoose": "^5.11.96",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
